--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,12 @@
       </dependency>
       <dependency>
         <groupId>org.apache.maven</groupId>
+        <artifactId>maven-core</artifactId>
+        <version>3.9.6</version>
+        <scope>provided</scope>
+      </dependency>
+      <dependency>
+        <groupId>org.apache.maven</groupId>
         <artifactId>maven-plugin-api</artifactId>
         <version>3.9.6</version>
         <scope>provided</scope>
@@ -67,6 +73,12 @@
       <groupId>com.github.ekryd.reflection-utils</groupId>
       <artifactId>reflection-utils</artifactId>
       <version>1.2.0</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.junit.vintage</groupId>
+      <artifactId>junit-vintage-engine</artifactId>
+      <version>5.6.0</version>
       <scope>test</scope>
     </dependency>
     <dependency>
