Update groupId to org.emergent.maven.sortpom

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,15 +1,15 @@
 name: build
 
 on:
-  push:
-    # Avoid workflow run for _merged_ `dependabot` PRs.
-    # They were (hopefully!) already tested in PR-triggered workflow.
-    branches-ignore: "dependabot/**"
-  pull_request:
-    paths-ignore:
-      - "**.adoc"
-      - "**.md"
-      - "**.txt"
+  #push:
+  #  # Avoid workflow run for _merged_ `dependabot` PRs.
+  #  # They were (hopefully!) already tested in PR-triggered workflow.
+  #  branches-ignore: "dependabot/**"
+  #pull_request:
+  #  paths-ignore:
+  #    - "**.adoc"
+  #    - "**.md"
+  #    - "**.txt"
 
 permissions:
   contents: write
