--- a/maven-plugin/pom.xml
+++ b/maven-plugin/pom.xml
@@ -4,12 +4,13 @@
   <modelVersion>4.0.0</modelVersion>
 
   <parent>
-    <groupId>com.github.ekryd.sortpom</groupId>
+    <groupId>org.emergent.maven.sortpom</groupId>
     <artifactId>sortpom-parent</artifactId>
     <version>3.4.2-SNAPSHOT</version>
   </parent>
 
   <!-- Basics -->
+  <groupId>org.emergent.maven.plugins</groupId>
   <artifactId>sortpom-maven-plugin</artifactId>
   <packaging>maven-plugin</packaging>
   <name>SortPom Plugin</name>
@@ -17,7 +18,7 @@
 
   <dependencies>
     <dependency>
-      <groupId>com.github.ekryd.sortpom</groupId>
+      <groupId>org.emergent.maven.sortpom</groupId>
       <artifactId>sortpom-sorter</artifactId>
       <version>3.4.2-SNAPSHOT</version>
     </dependency>
