--- a/maven-plugin/src/it/keep-timestamp/pom.xml
+++ b/maven-plugin/src/it/keep-timestamp/pom.xml
@@ -3,7 +3,7 @@
   <name>SortPom Plugin :: ITs :: Default configuration</name>
   <modelVersion>4.0.0</modelVersion>
   <artifactId>default-configuration</artifactId>
-  <groupId>com.github.ekryd.sortpom.its</groupId>
+  <groupId>org.emergent.maven.sortpom.its</groupId>
   <version>0.0.1-SNAPSHOT</version>
   <packaging>pom</packaging>
   <description>Test default parameters of the plugin</description>
@@ -14,7 +14,7 @@
   <build>
     <plugins>
       <plugin>
-        <groupId>com.github.ekryd.sortpom</groupId>
+        <groupId>org.emergent.maven.plugins</groupId>
         <artifactId>sortpom-maven-plugin</artifactId>
         <version>@pom.version@</version>
         <executions>
