--- a/maven-plugin/src/it/sort-dependency-management/expected/pom.xml
+++ b/maven-plugin/src/it/sort-dependency-management/expected/pom.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <groupId>com.github.ekryd.sortpom.its</groupId>
+  <groupId>org.emergent.maven.sortpom.its</groupId>
   <artifactId>sort-dependencies</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <packaging>pom</packaging>
@@ -43,9 +43,9 @@
         <scope>test</scope>
       </dependency>
       <dependency>
-        <groupId>com.github.ekryd.sortpom</groupId>
+        <groupId>org.emergent.maven.sortpom</groupId>
         <artifactId>sortpom-sorter</artifactId>
-        <version>3.4.1</version>
+        <version>3.4.2-SNAPSHOT</version>
       </dependency>
       <dependency>
         <groupId>org.springframework</groupId>
@@ -65,14 +65,14 @@
       <scope>import</scope>
     </dependency>
     <dependency>
-      <groupId>com.github.ekryd.sortpom</groupId>
-      <artifactId>sortpom-sorter</artifactId>
-      <version>3.4.1</version>
-    </dependency>
-    <dependency>
       <groupId>org.apache.maven</groupId>
       <artifactId>maven-plugin-api</artifactId>
       <version>3.9.6</version>
+    </dependency>
+    <dependency>
+      <groupId>org.emergent.maven.sortpom</groupId>
+      <artifactId>sortpom-sorter</artifactId>
+      <version>3.4.2-SNAPSHOT</version>
     </dependency>
     <dependency>
       <groupId>org.apache.maven.plugin-tools</groupId>
@@ -102,7 +102,7 @@
   <build>
     <plugins>
       <plugin>
-        <groupId>com.github.ekryd.sortpom</groupId>
+        <groupId>org.emergent.maven.plugins</groupId>
         <artifactId>sortpom-maven-plugin</artifactId>
         <version>@pom.version@</version>
         <executions>
