--- a/maven-plugin/src/it/sort-order-file/expected/pom.xml
+++ b/maven-plugin/src/it/sort-order-file/expected/pom.xml
@@ -4,20 +4,20 @@
   <name>SortPom Plugin :: ITs :: Sort dependencies</name>
   <description>Test sorting dependencies</description>
   <url>no-url</url>
-  <groupId>com.github.ekryd.sortpom.its</groupId>
+  <groupId>org.emergent.maven.sortpom.its</groupId>
   <artifactId>sort-dependencies</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <packaging>pom</packaging>
   <dependencies>
     <dependency>
-      <groupId>com.github.ekryd.sortpom</groupId>
-      <artifactId>sortpom-sorter</artifactId>
-      <version>3.4.1</version>
-    </dependency>
-    <dependency>
       <groupId>org.apache.maven</groupId>
       <artifactId>maven-plugin-api</artifactId>
       <version>3.9.6</version>
+    </dependency>
+    <dependency>
+      <groupId>org.emergent.maven.sortpom</groupId>
+      <artifactId>sortpom-sorter</artifactId>
+      <version>3.4.2-SNAPSHOT</version>
     </dependency>
     <dependency>
       <groupId>org.apache.maven.plugin-tools</groupId>
@@ -50,7 +50,7 @@
   <build>
     <plugins>
       <plugin>
-        <groupId>com.github.ekryd.sortpom</groupId>
+        <groupId>org.emergent.maven.plugins</groupId>
         <artifactId>sortpom-maven-plugin</artifactId>
         <version>@pom.version@</version>
         <executions>
