--- a/sorter/pom.xml
+++ b/sorter/pom.xml
@@ -4,7 +4,7 @@
   <modelVersion>4.0.0</modelVersion>
 
   <parent>
-    <groupId>com.github.ekryd.sortpom</groupId>
+    <groupId>org.emergent.maven.sortpom</groupId>
     <artifactId>sortpom-parent</artifactId>
     <version>3.4.2-SNAPSHOT</version>
   </parent>
