--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
   <modelVersion>4.0.0</modelVersion>
 
   <!-- Basics -->
-  <groupId>com.github.ekryd.sortpom</groupId>
+  <groupId>org.emergent.maven.sortpom</groupId>
   <artifactId>sortpom-parent</artifactId>
   <version>3.4.2-SNAPSHOT</version>
   <packaging>pom</packaging>
@@ -114,7 +114,7 @@
           <version>2.1.0</version>
         </plugin>
         <plugin>
-          <groupId>com.github.ekryd.sortpom</groupId>
+          <groupId>org.emergent.maven.sortpom</groupId>
           <artifactId>sortpom-maven-plugin</artifactId>
           <version>3.4.1</version>
           <configuration>
