--- a/.github/workflows/maven-tests.yaml
+++ b/.github/workflows/maven-tests.yaml
@@ -14,3 +14,5 @@ jobs:
       - uses: actions/checkout@v4
       - name: Test with Maven
         uses: emergentdotorg/github-actions/maven-verify@v2
+        with:
+          activate-profiles: ''
