--- a/.github/workflows/maven-release.yaml
+++ b/.github/workflows/maven-release.yaml
@@ -15,6 +15,6 @@ jobs:
           deploy-server: 'central'
           deploy-actor: ${{ secrets.MAVEN_CENTRAL_ACTOR }}
           deploy-token: ${{ secrets.MAVEN_CENTRAL_TOKEN }}
-          gpg-passphrase: ${{ secrets.GPG_PASSPHRASE }}
-          gpg-private-key: ${{ secrets.GPG_PRIVATE_KEY }}
+          gpg-passphrase: ${{ secrets.MAVEN_GPG_PASSPHRASE }}
+          gpg-private-key: ${{ secrets.MAVEN_GPG_PRIVATE_KEY }}
           activate-profiles: 'distribution'
