--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,8 @@
     <maven.compiler.release>11</maven.compiler.release>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <slf4j.version>2.0.12</slf4j.version>
+    <assembly.tarLongFileMode>posix</assembly.tarLongFileMode>
+    <gpg.useagent>true</gpg.useagent>
   </properties>
 
   <dependencyManagement>
