Moving when javadoc and sources are bundled

--- a/pom.xml
+++ b/pom.xml
@@ -489,7 +489,7 @@
                 <goals>
                   <goal>jar</goal>
                 </goals>
-                <phase>verify</phase>
+                <phase>package</phase>
               </execution>
             </executions>
           </plugin>
@@ -503,7 +503,7 @@
                 <goals>
                   <goal>jar-no-fork</goal>
                 </goals>
-                <phase>verify</phase>
+                <phase>package</phase>
               </execution>
             </executions>
           </plugin>
